# hse-comp-arch

./: README.md  build.sh
comp-arch-1/: CMakeLists.txt  README.md
comp-arch-1/src/: constant.h  diagonal_matrix.cpp  two_dimensional_array.h
comp-arch-1/test/output/: to1_1  to1_2  to2_2  to3_2  to4_2  to5_1  to5_2
comp-arch-2/: .gitignore  README.md  test.sh
comp-arch-2/src/: container.cpp  container.h  diagonal_matrix.cpp  diagonal_matrix.h  lower_triangular_matrix.cpp  lower_triangular_matrix.h  main.cpp  matrix.cpp  matrix.h  two_dimensional_array.cpp  two_dimensional_array.h
comp-arch-2/test/input/: ti1  ti2  ti3
comp-arch-2/test/output/: to4_1
comp-arch-3/: README.md  test.sh
comp-arch-3/src/: diagonal_matrix.py  lower_triangular_matrix.py  main.py  matrix.py  random_generator.py  timer.py  two_dimensional_array.py
comp-arch-3/test/input/: ti1  ti2  ti3  ti4  ti5
comp-arch-3/test/output/: to1_2  to2_1  to2_2  to3_1  to3_2  to4_1  to4_2  to5_1  to5_2
comp-arch-5/: CMakeLists.txt  README.md
comp-arch-5/src/: Game.cpp  Game.h  main.cpp  warrior.cpp  warrior.h
src/: container.cpp  container.h  diagonal_matrix.h  lower_triangular_matrix.cpp  lower_triangular_matrix.h  main.cpp  matrix.cpp  matrix.h  rnd.h  two_dimensional_array.cpp
test/input/: ti4  ti5
test/output/: to2_1  to3_1
